Vote update from GUI

--- a/index.html
+++ b/index.html
@@ -3,5 +3,4 @@
 <li>Minecraft: 1 vote</li>
 <li>GeoGuessr: 1 vote</li>
 <li>Organic Burger Simulator: 1 vote</li>
-<li>Date Everything!: 1 vote</li>
-<li>test game by bruce: 1 vote</li></ul></body></html>
+<li>Date Everything!: 1 vote</li></ul></body></html>
